TC-001/001-pod.yaml
# pod-invalid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-invalid
spec:
  containers:
    - name: nginx
      image: nginx
